doc(user): update doc
